[metadata]
name = wv-tree-counter
version = 0.19.1
author = Ashley Mitchell
author_email = ashley.mitchell@osmrereclamation.gov
description = WV Tree Counter – Automated NDVI and canopy analysis for WVDEP SMCRA permits.
long_description = file: README.md
long_description_content_type = text/markdown
license = MIT
url = https://github.com/ashleyreagan/wv-tree-counter
project_urls =
    Bug Tracker = https://github.com/ashleyreagan/wv-tree-counter/issues
classifiers =
    Development Status :: 5 - Production/Stable
    Intended Audience :: Science/Research
    License :: OSI Approved :: MIT License
    Programming Language :: Python :: 3.10
    Topic :: Scientific/Engineering :: GIS

[options]
packages = find:
install_requires =
    rich
    tqdm
    deepforest
    geopandas
    rasterio
    shapely
    numpy
    matplotlib
    matplotlib-scalebar
    pandas
    joblib
    requests
python_requires = >=3.9

[options.entry_points]
console_scripts =
    wv-tree-counter = wv_tree_counter.main:main